fix alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,3 +34,7 @@ a {
   height: 20px;
   line-height: 40%;
 }
+
+.reply-box {
+  margin-left: 80px;
+}
